--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -29,6 +29,7 @@ gem 'yt', '~> 0.32.0'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'annotate'
+  gem 'dotenv-rails'
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
 end
 
