--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -30,6 +30,8 @@ group :development, :test do
   gem 'annotate'
   gem 'dotenv-rails'
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'rspec-rails'
+  gem 'factory_bot_rails'
 end
 
 group :development do
