--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -29,6 +29,7 @@ group :development, :test do
   gem 'sqlite3', '~> 1.4'
   gem 'annotate'
   gem 'dotenv-rails'
+  gem 'pry-rails'
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'rspec-rails'
   gem 'factory_bot_rails'
