fix: cd コマンドでディレクトリを移動してデプロイ

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,14 +31,12 @@ jobs:
       - store_test_results:
           path: /tmp/test-results
   deploy:
-    working_directory: ~/kingkong_playlist/backend
     docker:
       - image: buildpack-deps:trusty
     steps:
-      - checkout:
-          path: ~/kingkong_playlist
+      - checkout
       - run:
-          command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master -f
+          command: cd backend && git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
 workflows:
   version: 2
