--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
       - run:
           command: |
             cd backend/
+            heroku git:remote -a $HEROKU_APP_NAME
             git pull heroku master
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
