--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
       - run:
           command: |
             cd backend/
-            heroku git:remote -a $HEROKU_APP_NAME
+            git remote add heroku https://git.heroku.com/$HEROKU_APP_NAME.git
             git pull heroku master
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
