--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,16 +37,18 @@ jobs:
     steps:
       - checkout:
           path: ~/kingkong_playlist
+      - restore_cache:
+          keys: v1-npm-deps-{{ checksum "package-lock.json" }}
       - run:
-          command: npm install
+          command: yarn
       - save_cache:
           key: v1-npm-deps-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
       - run:
-          command: npm install --dev firebase-tools
+          command: yarn add --dev firebase-tools
       - run:
-          command: npm run build
+          command: yarn run build
       - run:
           command: node_modules/.bin/firebase deploy --project "$FIREBASE_PROJECT_ID" --token "$FIREBASE_DEPLOY_TOKEN"
 workflows:
