--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,10 @@ workflows:
   build-deploy:
     jobs:
       - build
-      - frontend-deploy:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
+      # デプロイは成功するが、動作しなくなるのでコメントアウト
+      # - frontend-deploy:
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only: master
