--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.17.2",
     "moment": "^2.27.0",
     "vue": "^2.6.11",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.2.0",
     "vue-youtube": "^1.4.0",
     "vuetify": "^2.2.11",
