--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,10 @@ jobs:
           command: bundle exec rspec
       - store_test_results:
           path: /tmp/test-results
+
+orbs:
+  slack: circleci/slack@3.4.2
+
 workflows:
   version: 2
   build-deploy:
