--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ jobs:
           command: bundle exec rspec
       - store_test_results:
           path: /tmp/test-results
+      - slack/status:
+          channel: circleci
 
 orbs:
   slack: circleci/slack@3.4.2
