fix: 失敗したときだけ通知を飛ばす形に変更&メンションする

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
       - store_test_results:
           path: /tmp/test-results
       - slack/status:
+          fail_only: true
+          mentions: $KENZO_USER_ID
           channel: circleci
 
 orbs:
